# RakshAi

./: README.md  pyproject.toml  requirements.txt  voice.py
.github/workflows/: ci.yml
autobotx/: README.md  camera_feed.py  gesture_tracker.py  main.py  spotify.py  spotify_controller.py  voice.py  voice_assistant.py
kavach/: arduino_reader.py  main.py  requirements.txt
kavach/backend/: main.py
kavach/frontend/: style.css  sw.js  vercel.json
kavach/static/: app.js  index.html
lessons/: lesson_06_gesture_recognition_full.py
src/: README.md  main.py  voice_assistant.py
web_app/: main.py
web_app/api/: index.py
web_app/public/: app.js  index.html  styles.css
