[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobotx-uchless-kisosk"
version = "0.1.0"
description = "Hand-gesture, voice, and Spotify controller"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
keywords = ["gesture-control", "opencv", "mediapipe", "spotify", "voice-assistant", "autobotx uchless kisosk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "mediapipe==0.10.14",
  "numpy==2.4.4",
  "opencv-python==4.13.0.92",
  "pygame==2.6.1",
  "mss",
  "sounddevice==0.5.5",
  "SpeechRecognition==3.16.0",
  "spotipy==2.25.1",
]

[project.scripts]
jarvis-gesture = "jarvis_control.gesture:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_control*"]

[tool.vercel]
entrypoint = "web_app.api.index:app"
